--- a/AutomationPractice/pom.xml
+++ b/AutomationPractice/pom.xml
@@ -11,13 +11,19 @@
     <artifactId>selenium-java</artifactId>
     <version>3.141.59</version>
 </dependency>
-  <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+ <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>6.14.3</version>
+    <version>6.14.2</version>
     <scope>test</scope>
-</dependency> 
+</dependency>
+<!-- https://mvnrepository.com/artifact/jexcelapi/jxl -->
+<dependency>
+    <groupId>jexcelapi</groupId>
+    <artifactId>jxl</artifactId>
+    <version>2.4.2</version>
+</dependency>
 <!-- https://mvnrepository.com/artifact/jxl/jxl -->
 
   </dependencies>
